# crud-app

./: .gitignore  Dockerfile  database.py  frontend.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
